; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-tcp-shutdown-after-write.c_timer_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-tcp-shutdown-after-write.c_timer_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@close_cb = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"TEST\00", align 1
@write_req = common dso_local global i32 0, align 4
@conn = common dso_local global i32 0, align 4
@write_cb = common dso_local global i32 0, align 4
@shutdown_req = common dso_local global i32 0, align 4
@shutdown_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @timer_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @close_cb, align 4
  %7 = call i32 @uv_close(i32* %5, i32 %6)
  %8 = call i32 @uv_buf_init(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* @write_cb, align 4
  %10 = call i32 @uv_write(i32* @write_req, i32* @conn, i32* %3, i32 1, i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp eq i32 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @ASSERT(i32 %13)
  %15 = load i32, i32* @shutdown_cb, align 4
  %16 = call i32 @uv_shutdown(i32* @shutdown_req, i32* @conn, i32 %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp eq i32 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i32 @ASSERT(i32 %19)
  ret void
}

declare dso_local i32 @uv_close(i32*, i32) #1

declare dso_local i32 @uv_buf_init(i8*, i32) #1

declare dso_local i32 @uv_write(i32*, i32*, i32*, i32, i32) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_shutdown(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
